fixed node jump

--- a/public/style.css
+++ b/public/style.css
@@ -1,7 +1,5 @@
 body{
     background-color:white;
-
-    
 }
 
 .head{
@@ -27,28 +25,34 @@ body{
 }
 
 .skillnode{
-    padding-top: .7rem;
+    margin-top: 2rem;
+    position: relative;
+    justify-content: center;
+    width: 100%;
+}
+
+.innernode{
+    position: relative;
+    padding-top: .2rem;
     padding-left: 1rem;
     padding-right: 1rem;
     justify-content: center;
-    margin-right: .5rem;
+    margin-right: .2rem;
     height: 22px;
-    
     border-radius: 3rem;
     background-color: rgb(48, 184, 184);
     color: azure;
-
 }
 
-.skillnode:hover{
+.innernode:hover{
     transform: translateY(-7px);
     box-shadow: 7px 7px 7px 2px rgba(0,0,0,0.3);
     height: 40px;
     width: 70px;
-    background-color: aqua;
-    color: black;
-    -webkit-transition: all 1s ease;
-    transition: all 1.3s ease;
+    background-color: rgb(153, 9, 158);
+    color: yellow;
+    -webkit-transition: all .3s ease;
+    transition: all .3s ease;
 
 }
 
@@ -66,11 +70,11 @@ body{
 }
 
 .menu:hover{
-    font-size: 73px;
+    font-size: 60px;
     color: blue;
     letter-spacing: 1.8rem;
-    -webkit-transition: all 1s ease;
-    transition: all 1.3s ease;
+    -webkit-transition: all .3s ease;
+    transition: all .3s ease;
 
   
 }
@@ -112,7 +116,16 @@ body{
     margin-left: var(--text-divider-gap);
   } */
 
-  .panel{
+.menubody{
+    position: absolute;
+    top: 30%;
+    text-align: center;
+    height: 100%;
+    width: 100%;
+    
+}
+
+.panel{
     height: 230px;
     margin-left: 9%;
     margin-right: 9%;
@@ -125,8 +138,8 @@ body{
 
 .panel:hover {
     height: 400px;
-    -webkit-transition: all 1s ease;
-    transition: all 1.3s ease;
+    -webkit-transition: all .7s ease;
+    transition: all .7s ease;
 
 }
 
@@ -176,7 +189,6 @@ body{
 
 #contactpanel{
     /* background-image: url("img/dragonmouth.jpg"); */
-    margin-bottom: 10%;
     background-repeat: no-repeat;
     background-position: center; 
     position: relative;
@@ -213,8 +225,8 @@ body{
   .contactlink:hover{
     transform: translateY(-7px);
     box-shadow: 7px 7px 7px 2px rgba(0,0,0,0.3);
-    -webkit-transition: all 1s ease;
-    transition: all 1.3s ease;
+    -webkit-transition: all .3s ease;
+    transition: all .3s ease;
   }
 
   #github{height: 94px;
